@@ -20,7 +20,8 @@ Document header
 <hr class="header"/>
 </div>
 <div class="document" id="restructuredtext-test-document">
-<span id="doctitle"></span><h1 class="title">reStructuredText Test Document</h1>
+<span id="doctitle"></span>
+<h1 class="title">reStructuredText Test Document</h1>
 <h2 class="subtitle" id="examples-of-syntax-constructs"><span id="subtitle"></span>Examples of Syntax Constructs</h2>
 <table class="docinfo" frame="void" rules="none">
 <col class="docinfo-name" />
